add device control v1

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,7 @@
 .app {
     height: 100vh;
     display: flex;
+    overflow: auto;
     justify-content: center;
     background-color: #e9f5f5;
 }
