update control component

--- a/src/css/variable.css
+++ b/src/css/variable.css
@@ -1,5 +1,6 @@
 :root {
+    --black-color: #333;
     --height-header: 70px;
     --white-color: #ffffff;
-    --primary-color: #008080;
+    --primary-color: #7398AD;
 }
