--- a/src/css/control.css
+++ b/src/css/control.css
@@ -10,25 +10,33 @@
 }
 
 h1 {
-    font-size: 20px;
+    width: 700px;
+    margin: 0 auto;
+    font-size: 18px;
     font-weight: bold;
-    text-align: center;
+    padding-top: 14px;
+    padding-left: 20px;
+    color: var(--black-color);
 }
 
+
 .devices {
-    width: 500px;
+    width: 700px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
 
 .device {
-    width: 200px;
-    margin: 10px;
+    height: 120px;
     display: flex;
+    margin: 10px; 
+    border-radius: 20px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #fff;
+    flex-basis: calc(33.33% - 20px);
 }
 
 .icon.active {
@@ -42,6 +50,7 @@ h1 {
 .device span {
     font-size: 15px;
     font-weight: bold;
+    color: var(--black-color);
 }
 
 .controls {
